13446: add label to result geojson

--- a/data/notebooks/pw/raster_predict.ipynb
+++ b/data/notebooks/pw/raster_predict.ipynb
@@ -1,15 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Styles result CropType .geojson. Note, that you have to add original path to results .geojson file obtained after learning model. See on pw folder and additional notebooks on server."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +114,7 @@
        "'/home/jovyan/work/notebooks/pw/data/final_predictions/clu_predictions_test.geojson'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +248,7 @@
        "[248 rows x 2 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,15 +268,13 @@
     "    colors = dict(soybeans='#d6bb87',\n",
     "                  corn='#fbec5d')\n",
     "    \n",
-    "    style = dict(color=colors.get(class_.lower(), '#C0C0C0'), \n",
-    "                 popup_text=class_.lower(), \n",
-    "                )    \n",
+    "    style = dict(color=colors.get(class_.lower(), '#C0C0C0'))\n",
     "    return str(style)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -317,118 +308,183 @@
        "      <th>0</th>\n",
        "      <td>MULTIPOLYGON (((-80.92192 40.63885, -80.92126 ...</td>\n",
        "      <td>Other</td>\n",
-       "      <td>{'color': '#C0C0C0', 'popup_text': 'other'}</td>\n",
+       "      <td>{'color': '#C0C0C0'}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>MULTIPOLYGON (((-80.93056 40.69504, -80.92921 ...</td>\n",
        "      <td>Corn</td>\n",
-       "      <td>{'color': '#fbec5d', 'popup_text': 'corn'}</td>\n",
+       "      <td>{'color': '#fbec5d'}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>MULTIPOLYGON (((-80.89612 40.63810, -80.89616 ...</td>\n",
        "      <td>Soybeans</td>\n",
-       "      <td>{'color': '#6F634B', 'popup_text': 'soybeans'}</td>\n",
+       "      <td>{'color': '#d6bb87'}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>MULTIPOLYGON (((-80.93498 40.69577, -80.93520 ...</td>\n",
        "      <td>Corn</td>\n",
-       "      <td>{'color': '#fbec5d', 'popup_text': 'corn'}</td>\n",
+       "      <td>{'color': '#fbec5d'}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>MULTIPOLYGON (((-80.89639 40.64179, -80.89650 ...</td>\n",
        "      <td>Other</td>\n",
-       "      <td>{'color': '#C0C0C0', 'popup_text': 'other'}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>243</th>\n",
-       "      <td>MULTIPOLYGON (((-83.38668 39.68851, -83.38131 ...</td>\n",
-       "      <td>Corn</td>\n",
-       "      <td>{'color': '#fbec5d', 'popup_text': 'corn'}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>244</th>\n",
-       "      <td>MULTIPOLYGON (((-83.27544 39.57453, -83.27367 ...</td>\n",
-       "      <td>Other</td>\n",
-       "      <td>{'color': '#C0C0C0', 'popup_text': 'other'}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>245</th>\n",
-       "      <td>MULTIPOLYGON (((-83.38905 39.68240, -83.38817 ...</td>\n",
-       "      <td>Other</td>\n",
-       "      <td>{'color': '#C0C0C0', 'popup_text': 'other'}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>246</th>\n",
-       "      <td>MULTIPOLYGON (((-83.25731 39.50507, -83.25765 ...</td>\n",
-       "      <td>Corn</td>\n",
-       "      <td>{'color': '#fbec5d', 'popup_text': 'corn'}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>247</th>\n",
-       "      <td>MULTIPOLYGON (((-83.26193 39.50746, -83.26199 ...</td>\n",
-       "      <td>Corn</td>\n",
-       "      <td>{'color': '#fbec5d', 'popup_text': 'corn'}</td>\n",
+       "      <td>{'color': '#C0C0C0'}</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>248 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                              geometry class_name  \\\n",
-       "0    MULTIPOLYGON (((-80.92192 40.63885, -80.92126 ...      Other   \n",
-       "1    MULTIPOLYGON (((-80.93056 40.69504, -80.92921 ...       Corn   \n",
-       "2    MULTIPOLYGON (((-80.89612 40.63810, -80.89616 ...   Soybeans   \n",
-       "3    MULTIPOLYGON (((-80.93498 40.69577, -80.93520 ...       Corn   \n",
-       "4    MULTIPOLYGON (((-80.89639 40.64179, -80.89650 ...      Other   \n",
-       "..                                                 ...        ...   \n",
-       "243  MULTIPOLYGON (((-83.38668 39.68851, -83.38131 ...       Corn   \n",
-       "244  MULTIPOLYGON (((-83.27544 39.57453, -83.27367 ...      Other   \n",
-       "245  MULTIPOLYGON (((-83.38905 39.68240, -83.38817 ...      Other   \n",
-       "246  MULTIPOLYGON (((-83.25731 39.50507, -83.25765 ...       Corn   \n",
-       "247  MULTIPOLYGON (((-83.26193 39.50746, -83.26199 ...       Corn   \n",
+       "                                            geometry class_name  \\\n",
+       "0  MULTIPOLYGON (((-80.92192 40.63885, -80.92126 ...      Other   \n",
+       "1  MULTIPOLYGON (((-80.93056 40.69504, -80.92921 ...       Corn   \n",
+       "2  MULTIPOLYGON (((-80.89612 40.63810, -80.89616 ...   Soybeans   \n",
+       "3  MULTIPOLYGON (((-80.93498 40.69577, -80.93520 ...       Corn   \n",
+       "4  MULTIPOLYGON (((-80.89639 40.64179, -80.89650 ...      Other   \n",
        "\n",
-       "                                              style  \n",
-       "0       {'color': '#C0C0C0', 'popup_text': 'other'}  \n",
-       "1        {'color': '#fbec5d', 'popup_text': 'corn'}  \n",
-       "2    {'color': '#6F634B', 'popup_text': 'soybeans'}  \n",
-       "3        {'color': '#fbec5d', 'popup_text': 'corn'}  \n",
-       "4       {'color': '#C0C0C0', 'popup_text': 'other'}  \n",
-       "..                                              ...  \n",
-       "243      {'color': '#fbec5d', 'popup_text': 'corn'}  \n",
-       "244     {'color': '#C0C0C0', 'popup_text': 'other'}  \n",
-       "245     {'color': '#C0C0C0', 'popup_text': 'other'}  \n",
-       "246      {'color': '#fbec5d', 'popup_text': 'corn'}  \n",
-       "247      {'color': '#fbec5d', 'popup_text': 'corn'}  \n",
-       "\n",
-       "[248 rows x 3 columns]"
+       "                  style  \n",
+       "0  {'color': '#C0C0C0'}  \n",
+       "1  {'color': '#fbec5d'}  \n",
+       "2  {'color': '#d6bb87'}  \n",
+       "3  {'color': '#fbec5d'}  \n",
+       "4  {'color': '#C0C0C0'}  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "preds['style'] = preds['class_name'].apply(lambda cl: create_style(cl))\n",
-    "preds"
+    "preds.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### add label to show on frontend"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>class_name</th>\n",
+       "      <th>style</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>MULTIPOLYGON (((-80.92192 40.63885, -80.92126 ...</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>{'color': '#C0C0C0'}</td>\n",
+       "      <td>Other</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>MULTIPOLYGON (((-80.93056 40.69504, -80.92921 ...</td>\n",
+       "      <td>Corn</td>\n",
+       "      <td>{'color': '#fbec5d'}</td>\n",
+       "      <td>Corn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>MULTIPOLYGON (((-80.89612 40.63810, -80.89616 ...</td>\n",
+       "      <td>Soybeans</td>\n",
+       "      <td>{'color': '#d6bb87'}</td>\n",
+       "      <td>Soybeans</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>MULTIPOLYGON (((-80.93498 40.69577, -80.93520 ...</td>\n",
+       "      <td>Corn</td>\n",
+       "      <td>{'color': '#fbec5d'}</td>\n",
+       "      <td>Corn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>MULTIPOLYGON (((-80.89639 40.64179, -80.89650 ...</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>{'color': '#C0C0C0'}</td>\n",
+       "      <td>Other</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            geometry class_name  \\\n",
+       "0  MULTIPOLYGON (((-80.92192 40.63885, -80.92126 ...      Other   \n",
+       "1  MULTIPOLYGON (((-80.93056 40.69504, -80.92921 ...       Corn   \n",
+       "2  MULTIPOLYGON (((-80.89612 40.63810, -80.89616 ...   Soybeans   \n",
+       "3  MULTIPOLYGON (((-80.93498 40.69577, -80.93520 ...       Corn   \n",
+       "4  MULTIPOLYGON (((-80.89639 40.64179, -80.89650 ...      Other   \n",
+       "\n",
+       "                  style     label  \n",
+       "0  {'color': '#C0C0C0'}     Other  \n",
+       "1  {'color': '#fbec5d'}      Corn  \n",
+       "2  {'color': '#d6bb87'}  Soybeans  \n",
+       "3  {'color': '#fbec5d'}      Corn  \n",
+       "4  {'color': '#C0C0C0'}     Other  "
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds['label'] = preds['class_name']\n",
+    "preds.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating styled result .geojson file...\n",
+      "Generated temp file: /home/jovyan/work/results/pw/clu_predictions_test.geojson.temp\n",
+      "Rename temp file: /home/jovyan/work/results/pw/clu_predictions_test.geojson.temp to /home/jovyan/work/results/pw/clu_predictions_test.geojson\n",
+      "Execution finished\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Generating styled result .geojson file...\")\n",
     "\n",
@@ -445,13 +501,20 @@
     "\n",
     "print(\"Execution finished\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python37",
+   "display_name": "PW",
    "language": "python",
-   "name": "python37"
+   "name": "pw"
   },
   "language_info": {
    "codemirror_mode": {
@@ -463,7 +526,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
