14166: add label to result geojson

--- a/data/notebooks/ied/FilterResults.ipynb
+++ b/data/notebooks/ied/FilterResults.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,14 +37,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "preds = gp.read_file(os.path.join(WORKDIR, \"predict_T36UXV.geojson\"))\n",
     "masks = gp.read_file(os.path.join(WORKDIR, \"masks.geojson\"))\n",
     "\n",
-    "aoi_path = os.getenv(\"AOI\", os.path.join(WORKDIR, \"aoi1_20200406.geojson\"))   \n",
+    "aoi_path = os.getenv(\"AOI\", os.path.join(WORKDIR, \"aoi3_20200406.geojson\"))   \n",
     "# aoi1_20200406.geojson\n",
     "# aoi2_20200406.geojson\n",
     "# aoi3_20200406.geojson\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
        "1  POLYGON ((34.75700 48.65271, 34.75700 48.65262..."
       ]
      },
-     "execution_count": 4,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
        "1  POLYGON ((629400.000 5390340.000, 629400.000 5..."
       ]
      },
-     "execution_count": 6,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>MULTIPOLYGON (((35.66062 48.75821, 35.63949 48...</td>\n",
+       "      <td>MULTIPOLYGON (((35.70358 49.53116, 35.68734 49...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -236,10 +236,10 @@
       ],
       "text/plain": [
        "   id                                           geometry\n",
-       "0   1  MULTIPOLYGON (((35.66062 48.75821, 35.63949 48..."
+       "0   1  MULTIPOLYGON (((35.70358 49.53116, 35.68734 49..."
       ]
      },
-     "execution_count": 8,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -328,29 +328,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>62</th>\n",
-       "      <td>POLYGON ((707440.000 5393140.000, 707450.000 5...</td>\n",
+       "      <th>3340</th>\n",
+       "      <td>POLYGON ((695800.000 5486700.000, 695810.000 5...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>64</th>\n",
-       "      <td>POLYGON ((707320.000 5393200.000, 707330.000 5...</td>\n",
+       "      <th>3342</th>\n",
+       "      <td>POLYGON ((694100.000 5486740.000, 694110.000 5...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>70</th>\n",
-       "      <td>POLYGON ((706850.000 5393330.000, 706860.000 5...</td>\n",
+       "      <th>3348</th>\n",
+       "      <td>POLYGON ((694470.000 5486870.000, 694480.000 5...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                             geometry\n",
-       "62  POLYGON ((707440.000 5393140.000, 707450.000 5...\n",
-       "64  POLYGON ((707320.000 5393200.000, 707330.000 5...\n",
-       "70  POLYGON ((706850.000 5393330.000, 706860.000 5..."
+       "                                               geometry\n",
+       "3340  POLYGON ((695800.000 5486700.000, 695810.000 5...\n",
+       "3342  POLYGON ((694100.000 5486740.000, 694110.000 5...\n",
+       "3348  POLYGON ((694470.000 5486870.000, 694480.000 5..."
       ]
      },
-     "execution_count": 12,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -397,34 +397,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>605</th>\n",
+       "      <th>272</th>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>NaN</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
-       "      <td>POLYGON ((698895.041 5399640.354, 698878.985 5...</td>\n",
+       "      <td>POLYGON ((695545.322 5489806.090, 695599.090 5...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>606</th>\n",
+       "      <th>273</th>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>NaN</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
-       "      <td>POLYGON ((699023.680 5399190.838, 699046.497 5...</td>\n",
+       "      <td>POLYGON ((695670.032 5489685.296, 695728.629 5...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>607</th>\n",
+       "      <th>274</th>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>NaN</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
-       "      <td>POLYGON ((699091.092 5399143.567, 699123.201 5...</td>\n",
+       "      <td>POLYGON ((695391.794 5489702.150, 695344.709 5...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -432,17 +432,17 @@
       ],
       "text/plain": [
        "       id  Data  Code Descriptio Comments Image  \\\n",
-       "605  None  None   NaN       None     None  None   \n",
-       "606  None  None   NaN       None     None  None   \n",
-       "607  None  None   NaN       None     None  None   \n",
+       "272  None  None   NaN       None     None  None   \n",
+       "273  None  None   NaN       None     None  None   \n",
+       "274  None  None   NaN       None     None  None   \n",
        "\n",
        "                                              geometry  \n",
-       "605  POLYGON ((698895.041 5399640.354, 698878.985 5...  \n",
-       "606  POLYGON ((699023.680 5399190.838, 699046.497 5...  \n",
-       "607  POLYGON ((699091.092 5399143.567, 699123.201 5...  "
+       "272  POLYGON ((695545.322 5489806.090, 695599.090 5...  \n",
+       "273  POLYGON ((695670.032 5489685.296, 695728.629 5...  \n",
+       "274  POLYGON ((695391.794 5489702.150, 695344.709 5...  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -516,53 +516,58 @@
        "      <th></th>\n",
        "      <th>geometry</th>\n",
        "      <th>style</th>\n",
+       "      <th>label</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>62</th>\n",
-       "      <td>POLYGON ((35.81695 48.65685, 35.81709 48.65684...</td>\n",
-       "      <td>{\"color\": \"#F4A460\", \"popup_text\": \"erosion\"}</td>\n",
+       "      <th>3340</th>\n",
+       "      <td>POLYGON ((35.70436 49.50130, 35.70450 49.50129...</td>\n",
+       "      <td>{\"color\": \"#F4A460\"}</td>\n",
+       "      <td>Erosion</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>64</th>\n",
-       "      <td>POLYGON ((35.81535 48.65742, 35.81549 48.65742...</td>\n",
-       "      <td>{\"color\": \"#F4A460\", \"popup_text\": \"erosion\"}</td>\n",
+       "      <th>3342</th>\n",
+       "      <td>POLYGON ((35.68093 49.50220, 35.68107 49.50220...</td>\n",
+       "      <td>{\"color\": \"#F4A460\"}</td>\n",
+       "      <td>Erosion</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>70</th>\n",
-       "      <td>POLYGON ((35.80904 48.65875, 35.80918 48.65875...</td>\n",
-       "      <td>{\"color\": \"#F4A460\", \"popup_text\": \"erosion\"}</td>\n",
+       "      <th>3348</th>\n",
+       "      <td>POLYGON ((35.68610 49.50325, 35.68624 49.50325...</td>\n",
+       "      <td>{\"color\": \"#F4A460\"}</td>\n",
+       "      <td>Erosion</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                             geometry  \\\n",
-       "62  POLYGON ((35.81695 48.65685, 35.81709 48.65684...   \n",
-       "64  POLYGON ((35.81535 48.65742, 35.81549 48.65742...   \n",
-       "70  POLYGON ((35.80904 48.65875, 35.80918 48.65875...   \n",
+       "                                               geometry                 style  \\\n",
+       "3340  POLYGON ((35.70436 49.50130, 35.70450 49.50129...  {\"color\": \"#F4A460\"}   \n",
+       "3342  POLYGON ((35.68093 49.50220, 35.68107 49.50220...  {\"color\": \"#F4A460\"}   \n",
+       "3348  POLYGON ((35.68610 49.50325, 35.68624 49.50325...  {\"color\": \"#F4A460\"}   \n",
        "\n",
-       "                                            style  \n",
-       "62  {\"color\": \"#F4A460\", \"popup_text\": \"erosion\"}  \n",
-       "64  {\"color\": \"#F4A460\", \"popup_text\": \"erosion\"}  \n",
-       "70  {\"color\": \"#F4A460\", \"popup_text\": \"erosion\"}  "
+       "        label  \n",
+       "3340  Erosion  \n",
+       "3342  Erosion  \n",
+       "3348  Erosion  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "preds_intersected['style'] = '{\"color\": \"#F4A460\", \"popup_text\": \"erosion\"}'\n",
+    "preds_intersected['style'] = '{\"color\": \"#F4A460\"}'\n",
+    "preds_intersected['label'] =\"Erosion\"\n",
     "preds_intersected.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -592,8 +597,8 @@
      "output_type": "stream",
      "text": [
       "Saving .geojson file...\n",
-      "Generated temp file: /home/jovyan/work/results/ied/aoi1_20200406_preds.geojson.temp\n",
-      "Rename temp file: /home/jovyan/work/results/ied/aoi1_20200406_preds.geojson.temp to /home/jovyan/work/results/ied/aoi1_20200406_preds.geojson\n",
+      "Generated temp file: /home/jovyan/work/results/ied/aoi3_20200406_preds.geojson.temp\n",
+      "Rename temp file: /home/jovyan/work/results/ied/aoi3_20200406_preds.geojson.temp to /home/jovyan/work/results/ied/aoi3_20200406_preds.geojson\n",
       "Finished\n"
      ]
     }
