--- a/data/notebooks/example/geojson.ipynb
+++ b/data/notebooks/example/geojson.ipynb
@@ -415,7 +415,7 @@
     "        data = copy.deepcopy(data_template)\n",
     "        data[0][\"y\"] = [random.randint(1, 5000), random.randint(1, 10000)]\n",
     "        style = dict(color=random.choice([\"red\", \"green\", \"blue\"]))\n",
-    "        label = random.choice([\"test_label_1\", \"test_label_2\", \"test_label_3\"])\n",
+    "        label = random.choibce([\"test_label_1\", \"test_label_2\", \"test_label_3\"])\n",
     "        feature = Feature(geometry=geometry, properties=dict(style=style, data=data, layout=layout, label=label))\n",
     "        features.append(feature)\n",
     "    return features"
@@ -444,6 +444,11 @@
     "    if random.choice([True, False]):\n",
     "        item['name'] = name\n",
     "        print(f\"Randomly selected to add name {name}\")\n",
+    "    \n",
+    "    if random.choice([True, False]):\n",
+    "        item['request_id'] = random.randint(0, int(1e6))\n",
+    "        print(f\"Randomly selected to add request_id {item['request_id']}\")\n",
+    "    \n",
     "    if random.choice([True, False]):             \n",
     "        start_date = random_date()\n",
     "        end_date = random_date(start_date)\n",
