--- a/data/notebooks/example/geojson.ipynb
+++ b/data/notebooks/example/geojson.ipynb
@@ -415,7 +415,7 @@
     "        data = copy.deepcopy(data_template)\n",
     "        data[0][\"y\"] = [random.randint(1, 5000), random.randint(1, 10000)]\n",
     "        style = dict(color=random.choice([\"red\", \"green\", \"blue\"]))\n",
-    "        label = random.choibce([\"test_label_1\", \"test_label_2\", \"test_label_3\"])\n",
+    "        label = random.choice([\"test_label_1\", \"test_label_2\", \"test_label_3\"])\n",
     "        feature = Feature(geometry=geometry, properties=dict(style=style, data=data, layout=layout, label=label))\n",
     "        features.append(feature)\n",
     "    return features"
