14312 vy add request_id field to Results table (#72)
* 14312: replace relative to abs imports

* 14312: pep8 add trailing comma

* 14312: rm null from string fields, left only blanks

* 14312: rm null from string fields, left only blanks

* 14312: add request_id field

* 14312: add request_id field

* 14312: add request_id generation

* 14312: rm request_id from search

* 14312: add request_id

* 14312: add released true if request_id is present

* 14312: add request_id

* 14312: fix typo

--- a/data/notebooks/example/geojson.ipynb
+++ b/data/notebooks/example/geojson.ipynb
@@ -444,6 +444,11 @@
     "    if random.choice([True, False]):\n",
     "        item['name'] = name\n",
     "        print(f\"Randomly selected to add name {name}\")\n",
+    "    \n",
+    "    if random.choice([True, False]):\n",
+    "        item['request_id'] = random.randint(0, int(1e6))\n",
+    "        print(f\"Randomly selected to add request_id {item['request_id']}\")\n",
+    "    \n",
     "    if random.choice([True, False]):             \n",
     "        start_date = random_date()\n",
     "        end_date = random_date(start_date)\n",
