14310: set valid test request_ids

--- a/data/notebooks/example/geojson.ipynb
+++ b/data/notebooks/example/geojson.ipynb
@@ -446,7 +446,7 @@
     "        print(f\"Randomly selected to add name {name}\")\n",
     "    \n",
     "    if random.choice([True, False]):\n",
-    "        item['request_id'] = random.randint(0, int(1e6))\n",
+    "        item['request_id'] = 1\n",
     "        print(f\"Randomly selected to add request_id {item['request_id']}\")\n",
     "    \n",
     "    if random.choice([True, False]):             \n",
