--- a/data/notebooks/example/geotiff.ipynb
+++ b/data/notebooks/example/geotiff.ipynb
@@ -203,7 +203,7 @@
     "                print(f\"Randomly selected to add start_date: {start_date} and end_date: {end_date}\")   \n",
     "                dst.update_tags(start_date=start_date, end_date=end_date)    \n",
     "            if random.choice([True, False]):\n",
-    "                request_id = random.randint(0, int(1e6))\n",
+    "                request_id = 2\n",
     "                print(f\"Randomly selected to add request_id {request_id}\")\n",
     "                dst.update_tags(request_id=request_id)\n",
     "            dst.write(raster)"
