14310: comment request ids generation

--- a/data/notebooks/example/geojson.ipynb
+++ b/data/notebooks/example/geojson.ipynb
@@ -445,9 +445,9 @@
     "        item['name'] = name\n",
     "        print(f\"Randomly selected to add name {name}\")\n",
     "    \n",
-    "    if random.choice([True, False]):\n",
-    "        item['request_id'] = 1\n",
-    "        print(f\"Randomly selected to add request_id {item['request_id']}\")\n",
+    "    # if random.choice([True, False]):\n",
+    "    #    item['request_id'] = 1\n",
+    "    #    print(f\"Randomly selected to add request_id {item['request_id']}\")\n",
     "    \n",
     "    if random.choice([True, False]):             \n",
     "        start_date = random_date()\n",
