14310 vy multithreaded aoi command (#74)
* 14310: add __init__

* 14310: add manager

* 14310: add _utils file

* 14310: update notebook_manager

* 14310: add _notebook

* 14310: add blank line, pep8

* 14310: add execute method, code upd

* 14310: add request_id from file to Result table

* 14310: set valid test request_ids

* 14310: add to db dump test Request entries

* 14310: add run for notebook_manager

* 14310: add blank lines

* 14391: replace logging error to warning

* 14391: update start time before sleep

* 14391: rename to notebook executor

* Revert "14310: add to db dump test Request entries"

This reverts commit 682686a5

* 14310: comment request ids generation

--- a/data/notebooks/example/geotiff.ipynb
+++ b/data/notebooks/example/geotiff.ipynb
@@ -202,10 +202,10 @@
     "                end_date = random_date(start_date)\n",
     "                print(f\"Randomly selected to add start_date: {start_date} and end_date: {end_date}\")   \n",
     "                dst.update_tags(start_date=start_date, end_date=end_date)    \n",
-    "            if random.choice([True, False]):\n",
-    "                request_id = random.randint(0, int(1e6))\n",
-    "                print(f\"Randomly selected to add request_id {request_id}\")\n",
-    "                dst.update_tags(request_id=request_id)\n",
+    "            # if random.choice([True, False]):\n",
+    "            #    request_id = 2\n",
+    "            #    print(f\"Randomly selected to add request_id {request_id}\")\n",
+    "            #    dst.update_tags(request_id=request_id)\n",
     "            dst.write(raster)"
    ]
   },
