--- a/data/notebooks/test/Test1_Execution.ipynb
+++ b/data/notebooks/test/Test1_Execution.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### First cell is reserved for input variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "START_DATE = \"2020-03-05\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -46,13 +62,6 @@
    "source": [
     "print(\"FINISHED executing notebook Test1_Execution.ipynb...\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
