--- a/data/notebooks/test/Test2_Execution.ipynb
+++ b/data/notebooks/test/Test2_Execution.ipynb
@@ -1,8 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### First cell is reserved for input variables"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AOI = \"aoi\"\n",
+    "START_DATE = None\n",
+    "END_DATE = \"2020-01-01\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
