14455: add test vars

--- a/data/notebooks/test/Test1_Execution.ipynb
+++ b/data/notebooks/test/Test1_Execution.ipynb
@@ -9,11 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "START_DATE = \"2020-03-05\""
+    "START_DATE = \"rvbrbrtr\"\n",
+    "ENV=\"env\"\n",
+    "LIST = [1, 2, 3, 4, 5, ]"
    ]
   },
   {
