--- a/data/notebooks/test/Test2_Execution.ipynb
+++ b/data/notebooks/test/Test2_Execution.ipynb
@@ -13,19 +13,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import time\n",
+    "import random\n",
+    "\n",
     "AOI = \"aoi\"\n",
     "START_DATE = None\n",
     "END_DATE = \"2020-01-01\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import time\n",
-    "import random"
    ]
   },
   {
