--- a/data/notebooks/test/Test1_Execution.ipynb
+++ b/data/notebooks/test/Test1_Execution.ipynb
@@ -9,18 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "START_DATE = \"rvbrbrtr\"\n",
-    "ENV=\"env\"\n",
+    "START_DATE = \"start_date\"\n",
+    "ENV = \"env_var\"\n",
     "LIST = [1, 2, 3, 4, 5, ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,17 +30,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "START executing notebook Test1_Execution.ipynb...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"START executing notebook Test1_Execution.ipynb...\")\n",
     "sleep = random.randint(2, 10)\n",
@@ -50,27 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "FINISHED executing notebook Test1_Execution.ipynb...\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"FINISHED executing notebook Test1_Execution.ipynb...\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"FINISHED executing notebook Test1_Execution.ipynb...\")"
+   ]
   }
  ],
  "metadata": {
