--- a/data/notebooks/test/Test2_Execution.ipynb
+++ b/data/notebooks/test/Test2_Execution.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,17 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "START executing notebook Test1_Execution.ipynb...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"START executing notebook Test2_Execution.ipynb...\")\n",
     "sleep = random.randint(6, 10)\n",
@@ -43,11 +35,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "if random.choice([True, False]):\n",
+    "if random.choice[True, False]:\n",
     "    raise ValueError(\"Notebook finished execution with error!\")"
    ]
   },
@@ -59,13 +51,6 @@
    "source": [
     "print(\"FINISHED executing notebook Test1_Execution.ipynb...\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
