14456 nb input data (#85)
* 14313: add docker

* 14313: add docker.sock as volume

* 14313: upd _notebook.py

* 14313: import THREADS, TIMEOUT from settings

* 14313: add THREADS, TIMEOUT for AOI app

* 14313: add _Container

* 14313: rename THREADS, TIMEOUT vars

* 14313: rm not used __login

* 14313: add docker sock volume

* 14313: add GPUs settings var

* 14313: add context manager, inheritance

* 14313: rm context manager logging

* 14313: add test notebooks

* 14455: add success flag

* 14455: add success flag

* 14455: add nbconvert

* 14455: add exception handling

* 14455: add CELL_EXECUTION_TIMEOUT

* 14455: add test execution notebooks

* 14455: update sleep time

* 14455: save started_at

* 14456: add nbparameters, input data

* 14456: add nbconvert, nbparameters

* 14456: add NOTEBOOKS_FOLDER

* 14456: update notebooks

* 14455: add test vars

* 14455: add NotebookEditor

* 14456: replace notebook var to request

* 14456: add NotebookEditor to execute

* 14456: rename save->write, add return value

* 14456: replace notebook->request

* 14456: fix str output

* 14456: replace notebook->request

* 14456: comment get_token call

* 14456: add code to first cell, upd logging

* 14456: rm outputs

* 14456: rm outputs

* 14456: increase THREAD_SLEEP to 60 sec

* 14456: replace ewkt->wkt

* 14456: rm nbconvert, nbparametrise

* 14456: edit notebook as json

* 14456: add edit method to ContainerExecutor, rm NotebookEditor, upd logging

* 14456: add call edit method

* 14456: add copy editor script inside image

* 14456: rm NOTEBOOKS_FOLDER

* 14456: add _NotebookEditor class

* 14456: fix NotebookEditor1->NotebookEditor

* 14456: upd exception raising msg

* 14456: upd logging error msg

* 14456: add execute method, rename to NotebookExecutor

* 14456: rm code dir from image

* 14456: upd execute method, add timeout args

* 14456: rm edit method

* 14456: ad

--- a/data/notebooks/test/Test1_Execution.ipynb
+++ b/data/notebooks/test/Test1_Execution.ipynb
@@ -1,8 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### First cell is reserved for input variables"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "START_DATE = \"start_date\"\n",
+    "ENV = \"env_var\"\n",
+    "LIST = [1, 2, 3, 4, 5, ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,17 +30,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "START executing notebook Test1_Execution.ipynb...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"START executing notebook Test1_Execution.ipynb...\")\n",
     "sleep = random.randint(2, 10)\n",
@@ -32,34 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "FINISHED executing notebook Test1_Execution.ipynb...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"FINISHED executing notebook Test1_Execution.ipynb...\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
