--- a/data/notebooks/test/Test2_Execution.ipynb
+++ b/data/notebooks/test/Test2_Execution.ipynb
@@ -1,30 +1,33 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import time\n",
-    "import random"
+    "### First cell is reserved for input variables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "START executing notebook Test1_Execution.ipynb...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"START executing notebook Test1_Execution.ipynb...\")\n",
+    "import time\n",
+    "import random\n",
+    "\n",
+    "AOI = \"aoi\"\n",
+    "START_DATE = None\n",
+    "END_DATE = \"2020-01-01\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"START executing notebook Test2_Execution.ipynb...\")\n",
     "sleep = random.randint(6, 10)\n",
     "print(f\"Sleeping {sleep} sec\")\n",
     "time.sleep(sleep)"
@@ -32,11 +35,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "if random.choice([True, False]):\n",
+    "if random.choice[True, False]:\n",
     "    raise ValueError(\"Notebook finished execution with error!\")"
    ]
   },
@@ -48,13 +51,6 @@
    "source": [
     "print(\"FINISHED executing notebook Test1_Execution.ipynb...\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
