14640. Use os.rename instead of shutil.move

--- a/data/notebooks/pw/croptype_pipeline.ipynb
+++ b/data/notebooks/pw/croptype_pipeline.ipynb
@@ -138,7 +138,7 @@
     "result_name = f\"{REQUEST_ID}_{START_DATE}_{END_DATE}.tif\"\n",
     "os.makedirs(RESULTS_DIR, exist_ok=True)\n",
     "dst_file = os.path.join(RESULTS_DIR, result_name)\n",
-    "shutil.move(colored_tif, dst_file)"
+    "os.rename(colored_tif, dst_file)"
    ]
   },
   {
