14640. Extract name of current user from NB_USER variable

--- a/data/notebooks/pw/croptype_pipeline.ipynb
+++ b/data/notebooks/pw/croptype_pipeline.ipynb
@@ -39,6 +39,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "user = os.getenv('NB_USER')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "polygon = shapely.wkt.loads(AOI)\n",
     "aoi_filename = f\"{time.time()}_aoi.geojson\"\n",
     "gpd.GeoDataFrame(gpd.GeoSeries([polygon]), columns=[\"geometry\"]).to_file(aoi_filename, driver=\"GeoJSON\")\n",
@@ -54,7 +63,7 @@
    },
    "outputs": [],
    "source": [
-    "CONFIG_PATH = \"/home/jovyan/work/notebooks/pw/code/prediction_pipeline/config.yml\"\n",
+    "CONFIG_PATH = f\"/home/{user}/work/notebooks/pw/code/prediction_pipeline/config.yml\"\n",
     "prediction_file = run(CONFIG_PATH, aoi_filename, start_date, end_date)\n",
     "os.remove(aoi_filename)"
    ]
@@ -134,7 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RESULTS_DIR = \"/home/jovyan/work/results/pw/\"\n",
+    "RESULTS_DIR = f\"/home/{user}/work/results/pw/\"\n",
     "result_name = f\"{REQUEST_ID}_{START_DATE}_{END_DATE}.tif\"\n",
     "os.makedirs(RESULTS_DIR, exist_ok=True)\n",
     "dst_file = os.path.join(RESULTS_DIR, result_name)\n",
